<resources>
    <string name="app_name">myHeartrate on Bike</string>
    <string name="ble_not_supported">Your device has no Bluetooth</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="device_connected">Device connected</string>
    <string name="device_send_data">Receive heart rate data</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="connecting">connecting</string>
    <string name="found_device">Found new device</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="scan_stopped">Scan stopped</string>


    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string-array name="blackmode_orienntations">
        <item>@string/rbHorizontalOrientation</item>
        <item>@string/rbVertivalOrientation</item>
        <item>@string/rbRotationOrientation</item>
    </string-array>

    <!-- Layout items -->
    <string name="cbStopwatch">Start automatically</string>
    <string name="tStopwatch">Stopwatch</string>
    <string name="tSpeedometer">Speedometer</string>
    <string name="tNavigator">Navigator</string>
    <string name="tGPS_Status">GPS disabled</string>
    <string name="tRoute_Status">No Route loaded</string>
    <string name="tHeartrate">Heartrate</string>
    <string name="tBT_Status">Bluetooth disabled</string>
    <string name="tClock">Clock</string>
    <string name="tBlackMode">BlackMode</string>
    <string name="tBlackModeSettings">Orientation Settings</string>
    <string name="tDeviceSelection">Device</string>
    <string name="tMapSelection">Map</string>
    <string name="tHRViewData">--</string>
    <string name="tHRView">bpm</string>
    <string name="tHRPercentage">%</string>
    <string name="tHRViewPercentage">%</string>
    <string name="tSpeedometerViewData">--</string>
    <string name="tSpeedometerView">kmh</string>
    <string name="tTimerView">00:00.00</string>
    <string name="tNavigatorView">Center Position</string>
    <string name="bStartBlackMode">Start</string>
    <string name="rbHorizontalOrientation">Horizontal</string>
    <string name="rbVertivalOrientation">Vertical</string>
    <string name="rbRotationOrientation">Rotation</string>
    <string name="tBTDevice">BT Device</string>
    <string name="tBTDeviceStatus">Bluetooth disabled</string>

    <string name="ivBTRefreshDescription">BT Refresh Button Image</string>
    <string name="ivBTIconDescription">BT Status Image</string>
    <string name="ivOrientationIconDescription">Device Orientation Status Image</string>
    <string name="ivSwitchOfflineMap">Offline Map Switcher</string>
    <string name="ivSwitchDirectionArrows">Route Direction Switcher</string>
    <string name="ivImageMapSetting">Map Selection Status Image</string>
    <string name="ivMapDownload">Map Download Button Image</string>
    <string name="ivGpsPosition">Set GPS Position Button Image</string>
    <string name="download_start">Download start</string>
    <string name="tSwitchMapColorMode">Dark Mode</string>
    <string name="tSwitchOfflineMap">Offline Map</string>
    <string name="tSwitchDirectionArrows">Direction Arrows</string>


</resources>
