<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutBaseContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/linearLayoutStopwatch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/tStopwatch"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/MySwitch"/>

                    <CheckBox
                        android:id="@+id/cbStartStopwatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/cbStopwatch"
                        android:textColor="@color/colorGrey"
                        android:theme="@style/CustomCheckbox"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSpeedometer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/tSpeedometer"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/MySwitch"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tGPS_Status"
                        android:padding="8dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/tHeartrate"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/MySwitch"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_baseline_bluetooth_disabled_24px"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_baseline_refresh_24px"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/tClock"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/MySwitch"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutBlackMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/tBlackModeSettings"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioLandscape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_screen_lock_landscape_24px_w"
                        android:theme="@style/MyRadioButton"/>

                    <RadioButton
                        android:id="@+id/radioPortrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:drawableStart="@drawable/ic_baseline_screen_lock_portrait_24px_w"
                        android:theme="@style/MyRadioButton"/>

                    <RadioButton
                        android:id="@+id/radioRotation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_screen_rotation_24px_w"
                        android:theme="@style/MyRadioButton"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBlue"
        android:text="@string/bStartBlackMode"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.9"/>

</android.support.constraint.ConstraintLayout>